# smalltools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
docs/behavior/: cascading.md  suitable_class_finder.md
smalltools_st/behavior/: cascading.py  suitable_class_finder.py
src/smalltools/behavior/: suitable_class_finder.py
src/smalltools_st/behavior/: suitable_class_finder.py
tests/: test_suitable_class_finder.py  tests_suitable_class_finder.py  utils.py
tests/behavior/: test_cascading.py  test_suitable_class_finder.py
tests/behavior/utils/: cascading.py  suitable_class_finder.py
