[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smalltools_st"
version = "0.1.0"
authors = [
  { name="Armando Ezequiel Puerta", email="armando.ezequiel.puerta@gmail.com" },
]
description = "A Python port with a few small tools, snippets and utils (with a lot of WIP) learned in my times as a Smalltalk developer and which I miss a lot."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/EzequielPuerta/smalltools"
"Bug Tracker" = "https://github.com/EzequielPuerta/smalltools/issues"