[tool.poetry]
name = "smalltools-st"
version = "0.2.1"
description = "A Python port with a few small tools, snippets and utils (with a lot of WIP) learned in my times as a Smalltalk developer and which I miss a lot."
authors = ["Armando Ezequiel Puerta <armando.ezequiel.puerta@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "smalltools_st"}]
include = [{ path = "smalltools_st" }]
exclude = ["docs", "tests"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development"]
homepage = "https://github.com/EzequielPuerta/smalltools"
repository = "https://github.com/EzequielPuerta/smalltools"
documentation = "https://github.com/EzequielPuerta/smalltools"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
codecov = "^2.1.13"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/EzequielPuerta/smalltools/issues"